# document-qa-api

./: .env.example  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
app/: main.py  models.py
app/services/: document_service.py  llm_service.py
app/storage/: documents.py
